--- a/daftar.html
+++ b/daftar.html
@@ -26,7 +26,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url('https://cdn.discordapp.com/attachments/1321480740965191753/1321483640646926356/IMG_20241107_143448.jpg?ex=67871c4b&is=6785cacb&hm=e275b33914a0ce772f58e9b3e421711529897faa36f01b6d92507f33829dcb11&');
+            background-image: url('https://drive.google.com/file/d/18fXZfG1WhFoMso5a6-DlhZYFD20-fVbw/view?usp=sharing');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
