--- a/daftar.html
+++ b/daftar.html
@@ -26,7 +26,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: url('https://drive.google.com/file/d/18fXZfG1WhFoMso5a6-DlhZYFD20-fVbw/view?usp=sharing');
+            background-image: url('https://cdn.discordapp.com/attachments/1094644084628541543/1338901432874831902/IMG_20240428_060701.jpg?ex=67acc4a1&is=67ab7321&hm=17509ab6f06a90fc9af7f844cfc3e962e46f56ee56e748e1b7743cdbfda1cb62&');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
