--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ document.getElementById('chat-form').addEventListener('submit', async (event) =>
   // Scroll to bottom
   messagesDiv.scrollTop = messagesDiv.scrollHeight;
   
-  const apiKey = 'AIzaSyBL-C92cJgkp5gv2UCgqUTvbFbfmd7B6Ak'; // Replace with your actual API key
+  const apiKey = 'ganti dengan api key mu. kalau aku pakai gemini'; // Replace with your actual API key
   const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`;
   
   const requestData = {
